--- a/templates/chap2.tex
+++ b/templates/chap2.tex
@@ -176,7 +176,7 @@ Geophysical surveys target variations in the subsurface, revealing how condition
 
 As powerful as geophysical methods are at remotely detecting earth properties, each method represents an inherently underconstrained problem. Complex mathematical routines can invert data collected by aerial survey (e.g., gravity, magnetics) or acquired on the surface (resistivity, MT, seismic) to create 2-D or 3-D subsurface models. Still, unlike highly precise medical imaging technologies like Magnetic Resonance Imaging (MRI) that completely surround the target, geophysical techniques have a limited top-down or cross-well view of the earth and must contend with noisy environments and many unknown parameters. Solutions to geophysical problems are thus non-unique, and uncertainty increases with depth.
 
-Joint approaches to mathematical inversion for subsurface models address this ambiguity by constraining solutions to match the observations from multiple geophysical methods at once \citep{vozoff_joint_1975}. The complexity of a joint inverse problem applied to geothermal evaluation rapidly grows as more data sets are incorporated, particularly when the different data are sensitive to different earth properties \citep{moorkamp_framework_2011}. In addition, geothermal model results can meaningfully differ depending on the selected mathematical treatment used to generate solutions \citep{rosenkjaer_comparison_2015}. One alternative approach avoids the mathematical and computational demands by combining data semi-quantitatively, either by visually correlating individual model results or by cascading constraints from one geophysical model to the next to generate an integrated solution \citep{jousset_hengill_2011, lichoro_joint_2019}. Absent a tightly-coupled formulation of the relationship between all data inputs, the weighted influence of each geophysical data source must be chosen by the analyst, which can be a significant source of uncertainty, analogous to assigning prior mean and covariance in multivariate Bayesian inference. Integrating sparse or qualitative geologic data also becomes an issue in this already difficult problem of data integration.
+Joint approaches to mathematical inversion for subsurface models address this ambiguity by constraining solutions to match the observations from multiple geophysical methods at once \citep{vozoff_joint_1975}. The complexity of a joint inverse problem applied to geothermal evaluation rapidly grows as more data sets are incorporated, particularly when the different data are sensitive to different earth properties \citep{moorkamp_framework_2011}. In addition, geothermal model results can meaningfully differ depending on the selected additional assumptions made to make an under-determined problem into a well-posed one \citep{rosenkjaer_comparison_2015}. One alternative approach avoids the mathematical and computational demands by combining data semi-quantitatively, either by visually correlating individual model results or by cascading constraints from one geophysical model to the next to generate an integrated solution \citep{jousset_hengill_2011, lichoro_joint_2019}. Absent a tightly-coupled formulation of the relationship between all data inputs, the weighted influence of each geophysical data source must be chosen by the analyst, which can be a significant source of uncertainty, analogous to assigning prior mean and covariance in multivariate Bayesian inference. Integrating sparse or qualitative geologic data also becomes an issue in this already difficult problem of data integration.
 
 \subsubsection{Play Fairway Analysis}\label{ch2:pfa}
 
