--- a/templates/chap5.tex
+++ b/templates/chap5.tex
@@ -98,7 +98,7 @@ Figure \ref{fig:logreg_rfe} presents the results of Recursive Feature Selection 
 
 A final LR model trained on WDS4 was constructed using the tuned \verb|C| hyperparameter and reduced feature set from RFE. The confusion matrix shows moderately good model performance (Figure \ref{fig:logreg_conf_matrix}). Correct predictions (TP) for each of the four classes of geothermal gradient outnumber the misclassifications (FP) for those classes. The model appears to struggle most with differentiating between class-2 mid-grade (40--60 K/km) and class-3 high-grade (> 60 K/km) gradient locations ($31+45$ misclassifications), although there are also a large number (26) of false high-grade assignments to class-1 low-grade gradient points.
 
-Figure \ref{fig:logreg_auc} plots the macro average, micro average, and individual class ROC curves. Class-0 (non-thermal) predictive ability is quite high, pulling the micro-average AUC up to 0.88.  The macro AUC value of 0.85 is more aligned with the performance for other classes, which range over an AUC of 0.79--0.83. The trade-off between class 2 and class 3 is apparent in how the curve shapes mirror each other.
+Figure \ref{fig:logreg_auc} plots the macro average, micro average, and individual class ROC curves. Class-0 (non-thermal) predictive ability is quite high, pulling the micro-average AUC up to 0.88.  The macro AUC value of 0.85 is more aligned with the performance for other classes, which range over an AUC of 0.79--0.83. The trade-off between class 2 and class 3 is apparent in how the curve shapes mirror each other approximately, with respect to the anti-diagonal line TPR = 1 $-$ FPR.
 
 \begin{figure}[!htp]
 \centering
@@ -301,11 +301,11 @@ As a final step in model tuning, \verb|learning_rate| was decreased to 0.005 and
 \begin{figure}
 \centering
 \includegraphics[width=\textwidth]{templates/images/Figure-Shapley_notitle.png}
-\caption[XGBoost SHAP variable importance]{SHAP variable importance plot for the XGBoost classifier derived using the testing data subset of WBS4. Colors illustrate variation in feature importances for predicting specific classes of geothermal gradient. The stacked bar length (sum of colored bar lengths) indicates overall feature importance for the model. Clusters in stacked bar length suggest the model has five key predictive features, eleven features with moderate influence on the model, and four features with low predictive value.}
+\caption[XGBoost SHAP variable importance]{SHAP variable importance plot for the XGBoost classifier, derived using the testing data subset of WBS4. Colors illustrate feature importances for specific classes of geothermal gradient. The sum of colored bar lengths indicates overall feature importance for the model. Nearby values in sorted stacked bar length suggest the model has five key predictive features, eleven features with moderate influence on the model, and four features with low predictive value.}
 \label{fig:xgb_shap_global}
 \end{figure}
 
-Section \ref{ch3:xgb_shapley} noted several desirable attributes of feature importances derived from Shapley analysis. Figure \ref{fig:xgb_shap_global} plots the results of SHAP value calculations for the WDS4 XGBoost classifier using the test data subset. Each feature stacked bar is composed of class-specific colored bars. The length of a colored bar represents the importance of that feature in the prediction of a geothermal gradient class. Global feature importance for the classifier is indicated by the combined length of the stacked bar for that feature. The order of the features is sorted based on stacked bar length to highlight both the most and least important features. The top five most important features for the WDS4 model include Si Geothermometer Temperature, Heat Flow, Crustal Thickness, Volcanic-Dike Density, and Spring Density. Features not shown in the plot were deemed to have zero predictive value (i.e., DEM Gradient, Gravity Gradient, Magnetic-Anomaly Gradient, and Water-Table Depth). The lowermost four features on the plot ---Gamma Ray Absorbed-Dose Rate, Magnetic Anomaly, Average Precipitation, and Water-Table Gradient --- are also selected for elimination, reducing the final feature set for the XGBoost model to sixteen predictors.
+Section \ref{ch3:xgb_shapley} noted several desirable attributes of feature importances derived from Shapley analysis. Figure \ref{fig:xgb_shap_global} plots the results of SHAP value calculations for the WDS4 XGBoost classifier. Recall that SHAP values have local significance on a per-observation basis (i.e., local accuracy). This plot illustrates the mean absolute SHAP value of each feature across all instances in the test data subset, giving an average global impact. The colored bars illustrate relative importance of that feature in the prediction for the respective geothermal gradient class. Global importance is indicated by the sum of colored bar lengths (stacked length) for each feature. The order of the features is sorted on stacked length to highlight both the most and least important features. The top five most important features for the WDS4 model include Si Geothermometer Temperature, Heat Flow, Crustal Thickness, Volcanic-Dike Density, and Spring Density. Features not shown in the plot were deemed to have zero predictive value (i.e., DEM Gradient, Gravity Gradient, Magnetic-Anomaly Gradient, and Water-Table Depth). The lowermost four features on the plot ---Gamma Ray Absorbed-Dose Rate, Magnetic Anomaly, Average Precipitation, and Water-Table Gradient --- are also selected for elimination, reducing the final feature set for the XGBoost model to sixteen predictors.
 
 \subsection{Optimized Model Results}\label{ch5:xgb_final_results}
 
