--- a/templates/chap6.tex
+++ b/templates/chap6.tex
@@ -10,13 +10,13 @@ Section \ref{ch4:cm_rev} described the use of brine effectiveness in the cost mo
 
 In addition, installation of the Lightning Dock expansion can take place over a variety of different deployment schedules due to the modularity of the system. Rather than drill ten wells and install five binary-cycle plants all at once, deciding to delay aspects of the installation can be financially beneficial and less of an initial risk for the project.
 
-Figure \ref{fig:static_model_compare} shows the results for the pre-set capacity and pre-set flow-rate static models for sixty (60) installation schedule permutations. The pre-set capacity model results in project losses of \$20 million or more for all tested installation options. On the other hand, the fixed flow-rate model only drops below \$0 NPV for a handful of project plans, achieving \$3.7 million NPV for the case marked with a red diamond, where three (3) modules are installed up front and two (2) additional ones go live after a year of operation. Based on these results, all cost models used in the rest of this analysis apply a fixed flow rate per production well, and derive the aggregate electricity generation numbers based on the temperature of the produced brine.
+Figure \ref{fig:static_model_compare} shows the results for the pre-set capacity and pre-set flow-rate static models for sixty installation schedule permutations. The pre-set capacity model results in project losses of \$20 million or more for all tested installation options. By contrast, the fixed flow-rate model only drops below \$0 NPV for a handful of project plans, achieving \$3.7 million NPV for the case where three modules are installed up front and two additional ones go live after a year of operation (red diamond, Figure \ref{fig:static_model_compare}). Based on these results, all cost models used in the rest of this analysis apply a fixed flow rate per production well and derive the aggregate electricity generation numbers based on the temperature of the produced brine.
 
 \begin{figure}[!htp]
 \centering
 \includegraphics[width=.98\textwidth]
 {templates/images/Figure-Static_Model_Construction.png}
-\caption[Static cost-model comparison]{Static cost model comparison between pre-set aggregate capacity (5 MW target, green) and pre-set flow rate per production well (40 kg/s, purple), plotted against module installation schedule. Both models deploy five modules in all schedule permutations involving up to a five-year period. The red diamond marks the optimal model and power-plant expansion plan.}
+\caption[Static cost-model comparison]{Static cost model comparison between pre-set aggregate capacity (5 MW target, green) and pre-set flow rate per production well (40 kg/s, purple), plotted against module installation schedule. Each digit in the five-digit labels along the x-axis defines the module count installed in one of five consecutive years. A total of five modules are installed in each of the sixty schedule permutations. The red diamond marks the optimal scenario where the flow rate is fixed and the deployment includes three modules in the first year, two in the second.}
 \label{fig:static_model_compare}
 \end{figure}
 
@@ -26,7 +26,7 @@ Lifting the fixed-capacity requirement changes the production potential for each
 
 The updated power production per module reduces the required module count to a total of three (3) modules based on the original expansion target of 5 MW. Table \ref{tab:static_optimization} revisits the installation schedule grid search exercise to determine the optimal project plan under these circumstances. At an NPV of \$1.0 million, the best option deploys two (2) modules initially and adds an additional one (1) at the end of the first year. In order to standardize cost models for direct comparison, this installation plan is used for all cost models throughout the rest of this analysis.
 
-\begin{table}[!htp]%{R}{0.4\linewidth}
+\begin{table}[!htp]
 \centering
 \begin{tabular}{|c|c|c|r|}
 \hline
@@ -38,34 +38,33 @@ The updated power production per module reduces the required module count to a t
 2 & 0 & 1 & 0.6 \\ \hline
 2 & 1 & 0 & 1.0 \\ \hline
 \end{tabular}
-\caption[Static model module installation schedule]{Grid search for the optimal power-plant installation schedule based on the static cost model. Values are in \$M, where M is million.}
+\caption[Static model module installation schedule]{Grid search for the optimal power-plant installation schedule based on the static cost model. Schedule options are sorted on NPV in \$M, where M is million.}
 \label{tab:static_optimization}
 \end{table}
 
 \subsection{Summary Statistics}\label{ch6:static_stats}
 
-As a deterministic cost model, the static model performance is measured strictly on calculated NPV. This will act as a benchmark value for the other cost models explored in the rest of this chapter.
-
-\begin{table}[H]
-\centering
-\begin{tabular}{|l|c|}
-\hline
-\textbf{Static Model Statistics} &  \\ \hline
-NPV (\$M) & 1.0 \\ \hline
-\end{tabular}
-\caption[Static model statistics]{Static model statistics. NPV is reported in \$M, where M is million.}
-\label{tab:static_mod_stats}
-\end{table}
+As a deterministic cost model, the static model performance is measured strictly on calculated NPV: \textbf{\$1.0M}. This value serves as a benchmark for the other cost models explored in the rest of this chapter.
+%\begin{table}[H]
+%\centering
+%\begin{tabular}{|l|c|}
+%\hline
+%\textbf{Static Model Statistics} &  \\ \hline
+%NPV (\$M) & 1.0 \\ \hline
+%\end{tabular}
+%\caption[Static model statistics]{Static model statistics. NPV is reported in %\$M, where M is million.}
+%\label{tab:static_mod_stats}
+%\end{table}
 
 \section{Probabilistic Model Metrics}\label{ch6:cost_model_metrics}
 
-Monte Carlo simulation is applied to all of the probabilistic models to estimate the range of model behavior. For each model, results represent 2000 simulated runs where each realization defines a unique combination of variable values sampled from the PDFs reviewed in Section \ref{ch4:pdfs}. 
+Monte Carlo simulation is applied to all of the probabilistic models to estimate the range of model behavior. For each model, results represent 2000 simulated runs or \textit{realizations} ($\mathpzc{R}$), where each realization defines a unique combination of variable values sampled from the PDFs reviewed in Section \ref{ch4:pdfs}. 
 
 Common methods for evaluating a Monte Carlo ensemble include building a NPV histogram, constructing a \acrlong{cdf} (\acrshort{cdf} or target curve), and averaging the results together for \acrlong{enpv} (\acrshort{enpv}). Other interesting metrics for model comparison include standard deviation, individual percentiles, and direct comparison with the static model NPV (NPV$_{s}$). Standard deviation is the measure of how tightly the results cluster around the mean value. Distributions with low standard deviations are sometimes referred to as robust distributions. P$_{50}$ marks the the median, and P$_{05}$ and P$_{95}$ define marginal percentiles for 5\% \acrlong{var} (\acrshort{var}) and \acrlong{vag} (\acrshort{vag}), respectively. Each of these measures is reported for the probabilistic model cases described below.
 
 \section{Base Case Model}\label{ch6:base_case}
 
-The Base Case model mimics the Static model in form, but incorporates uncertainties in drilling costs, electricity pricing, geothermal gradient, reservoir temperature, and thermal drawdown rate to provide a more realistic forecast. No decision rules are included in this scenario. 
+The Base Case model mimics the static model in form, but incorporates uncertainties in drilling costs, electricity pricing, geothermal gradient, reservoir temperature, and thermal drawdown rate to provide a more realistic forecast. No decision rules are included in this scenario. 
 
 \subsection{Model Results}\label{ch6:base_results}
 
@@ -73,16 +72,16 @@ At $-\$$4.8 million ENPV, the Base Case model predicts over 560\% lower project 
 
 The Base Case ensemble shows a symmetric, pseudo-Gaussian distribution of NPV results, with the exception of a long right tail capturing rare but very positive project outcomes (Figure \ref{fig:base_case_hist}). Figure \ref{fig:base_case_cdf} illustrates the target curve tracing cumulative probabilities for observed NPV values. The P$_{50}$ value of $-\$$3.9 million suggests the highly-negative values in the lower half of results pull the average (ENPV) further into negative project value territory. Cumulatively, $\approx60\%$ of the realizations end in a net loss for the project (Figure \ref{fig:base_case_cdf}). And at $\approx3\times$ both the median and ENPV, standard deviation of NPV indicates this solution is not robust. 
 
-\begin{figure}[!htp]
+\begin{figure}
 \centering
-\includegraphics[width=.85\textwidth]{templates/images/Figure-Base_Case_Histogram.png}
+\includegraphics[width=.8\textwidth]{templates/images/Figure-Base_Case_Histogram.png}
 \caption[Base Case histogram]{Base Case probabilistic cost-model histogram illustrating the distribution of 2000 model realizations. NPV is reported in \$M, where M is million.}
 \label{fig:base_case_hist}
 \end{figure}
 
-\begin{figure}[!htp]
+\begin{figure}
 \centering
-\includegraphics[width=.85\textwidth]{templates/images/Figure-Base_Case_CDF.png}
+\includegraphics[width=.8\textwidth]{templates/images/Figure-Base_Case_CDF.png}
 \caption[Base Case CDF]{Cumulative distribution function for the Base Case probabilistic cost model. The curve summarizes results from 2000 model realizations. NPV is reported in \$M, where M is million.}
 \label{fig:base_case_cdf}
 \end{figure}
@@ -92,25 +91,23 @@ All told, the Base Case results display both a negative ENPV and a high likeliho
 \subsection{Summary Statistics}\label{ch6:base_stats}
 
 Table \ref{tab:base_stats} outlines key statistical measures summarizing the performance of the Base Case probabilistic cost model.
-%\begin{wraptable}{R}{0.5\linewidth}
 \begin{table}[H]
 \centering
+\resizebox*{!}{.225\textheight}{
 \begin{tabular}{|l|r|}
 \hline
-\textbf{Base Case Statistics} & Rx=2000 \\ \hline
+\textbf{Base Case Statistics} & $\mathpzc{R}$ = 2000 \\ \hline
 ENPV (\$M) & $\boldsymbol{-}$4.8 \\ \hline
 STD(NPV) (\$M) & 13.2 \\ \hline
 P05 NPV (\$M) & $\boldsymbol{-}$28.2 \\ \hline
 P50 NPV (\$M) & $\boldsymbol{-}$3.9 \\ \hline
 P95 NPV (\$M) & 15.9 \\ \hline
 \% Difference from NPV$_{s}$ & $\boldsymbol{-}$565\% \\ \hline
-\end{tabular}
-\caption[Probabilistic Base Case statistics]{Base case probabilistic model statistics for Rx = 2000 model realizations. NPV is reported in \$M, where M is million. NPV$_s$ refers to the static model NPV, as reported in Table \ref{tab:static_mod_stats}.}
+\end{tabular}}
+\caption[Probabilistic Base Case statistics]{Base case probabilistic model statistics for 2000 model realizations. NPV is reported in \$M, where M is million. NPV$_s$ refers to the static model NPV reported in Section \ref{ch6:static_stats}.}
 \label{tab:base_stats}
 \end{table}
-%\end{wraptable}
-\vfill
-\pagebreak
+
 \section{Redevelop Case Model}
 \label{ch6:redevelop_case}
 
@@ -120,18 +117,18 @@ The Redevelop Case model extends the Base Case with a redevelopment plan for the
 
 Adding the Redevelopment rule improves the project ENPV by \$2.3 million over the Base Case, but it still remains negative at $-\$$2.5 million, 340\% below the static model NPV. Redevelopment drilling costs come into play as the VAG (P$_{95}$ value of \$15.1 million) decreases slightly relative to the Base Case. But VAR (P$_{05}$ value of $-\$$21.3 million) shows a larger difference, improving by nearly \$7 million over the Base Case (Table \ref{tab:redevelop_stats}). This clearly reflects the improved production and power sales possible by managing reservoir conditions.
 
-Standard deviation of the ensemble distribution is less than observed for the Base Case, likely due to a narrower overall distribution without as many outliers in the tails (Figure \ref{fig:redevelop_case_hist}). The balance in distribution shape is reflected in the small difference (\$0.2 million) between ENPV and the P$_{50}$ result (Table \ref{tab:redevelop_stats}). Comparing the target curves between the Redevelop Case (Figure \ref{fig:redevelop_case_cdf}) and Base Case (Figure \ref{fig:base_case_cdf}), it becomes clear that the redevelopment flexibility does not address upside potential. Instead, it acts as a partial stop-gap on the worst case realizations of the model. The lower half of the curve tightens up, but there is little overall curve movement to the right to make the project more profitable.
+Standard deviation of the ensemble distribution is less than observed for the Base Case, likely due to a narrower overall distribution without as many outliers in the tails (Figure \ref{fig:redevelop_case_hist}). The balance in distribution shape is reflected in the small difference (\$0.2 million) between ENPV and the P$_{50}$ result (Table \ref{tab:redevelop_stats}). Comparing the target curves between the Redevelop Case (Figure \ref{fig:redevelop_case_cdf}) and Base Case (Figure \ref{fig:base_case_cdf}), it becomes clear that the redevelopment flexibility does not address upside potential. Instead, it acts as a partial stop-gap on the worst-case realizations of the model. The lower half of the curve tightens up, but there is little overall curve movement to the right to make the project more profitable.
 
-\begin{figure}[!htp]
+\begin{figure}
 \centering
-\includegraphics[width=.85\textwidth]{templates/images/Figure-Redevelop_Case_Histogram.png}
+\includegraphics[width=.8\textwidth]{templates/images/Figure-Redevelop_Case_Histogram.png}
 \caption[Redevelop Case histogram]{Redevelop Case probabilistic cost model histogram illustrating the distribution of 2000 model realizations. NPV is reported in \$M, where M is million.}
 \label{fig:redevelop_case_hist}
 \end{figure}
 
-\begin{figure}[!htp]
+\begin{figure}
 \centering
-\includegraphics[width=.85\textwidth]{templates/images/Figure-Redevelop_Case_CDF.png}
+\includegraphics[width=.8\textwidth]{templates/images/Figure-Redevelop_Case_CDF.png}
 \caption[Redevelop Case CDF]{Cumulative distribution function for the Redevelop Case probabilistic cost model. The curve summarizes results from 2000 model realizations. NPV is reported in \$M, where M is million.}
 \label{fig:redevelop_case_cdf}
 \end{figure}
@@ -144,17 +141,18 @@ Table \ref{tab:redevelop_stats} outlines key statistical measures summarizing th
 
 \begin{table}[H]
 \centering
+\resizebox*{!}{.225\textheight}{
 \begin{tabular}{|l|r|}
 \hline
-\textbf{Redevelop Case Statistics} & Rx=2000 \\ \hline
+\textbf{Redevelop Case Statistics} &  $\mathpzc{R}$ = 2000 \\ \hline
 ENPV (\$M) & $\boldsymbol{-}$2.5 \\ \hline
 STD(NPV) (\$M) & 11.7 \\ \hline
 P05 NPV (\$M) & $\boldsymbol{-}$21.3 \\ \hline
 P50 NPV (\$M) & $\boldsymbol{-}$2.3 \\ \hline
 P95 NPV (\$M) & 15.1 \\ \hline
 \% Difference from NPV$_{s}$ & $\boldsymbol{-}$344\% \\ \hline
-\end{tabular}
-\caption[Probabilistic Redevelop Case statistics]{Redevelop case probabilistic model statistics for Rx=2000 model realizations. NPV is reported in \$M, where M is million. NPV$_s$ refers to the static model NPV, as reported in Table \ref{tab:static_mod_stats}.}
+\end{tabular}}
+\caption[Probabilistic Redevelop Case statistics]{Redevelop case probabilistic model statistics for 2000 model realizations. NPV$_s$ refers to the static model NPV reported in Section \ref{ch6:static_stats}.}
 \label{tab:redevelop_stats}
 \end{table}
 
@@ -164,20 +162,23 @@ The Redevelop \& Grow Case model builds on the Redevelop Case with a decision ru
 
 \subsection{Model Results}\label{ch6:grow_results}
 
-Redevelop \& Grow model results use a field expansion amount of 25\% when the Capacity Growth decision rule is triggered. Assuming the PPA with the purchasing utility company is successfully renegotiated at the time of the expansion, this model results in a dramatic change in project value. ENPV is \$9.7 million, over \$12 million better than the Redevelop Case and over 800\% greater than static model NPV (Table \ref{tab:grow_stats}). The case shows notable improvement in both Value at Risk and Value at Gain; P$_{05}$ shifts by more than \$7 million to $-\$$14.2 million, and P$_{95}$ leaps to \$38.2 million as power plant growth captures market potential.
+Redevelop \& Grow model results use a field expansion amount of 25\% when the Capacity Growth decision rule is triggered. Assuming the PPA with the purchasing utility company is successfully renegotiated at the time of the expansion, this model results in a dramatic change in project value. ENPV is \$9.7 million, over \$12 million better than the Redevelop Case and over 800\% greater than static model NPV (Table \ref{tab:grow_stats}). The case shows notable improvement in both Value at Risk and Value at Gain; P$_{05}$ shifts by more than \$7 million to $-\$$14.2 million, and P$_{95}$ jumps to \$38.2 million as power-plant growth captures market potential. Project losses occur for 23\% of model realizations, compared to 55--60\% for the Base and Redevelop Cases.
 
-\begin{figure}[!htp]
+\begin{figure}
 \centering
-\includegraphics[width=.85\textwidth]{templates/images/Figure-Grow_Case_Histogram.png}
-\caption[Redevelop \& Grow Case histogram]{Redevelop \& Grow Case probabilistic cost model histogram illustrating the distribution of 2000 model realizations. NPV is reported in \$M, where M is million.}
+\includegraphics[width=.8\textwidth]{templates/images/Figure-Grow_Case_Histogram.png}
+\caption[Redevelop \& Grow Case histogram]{Redevelop \& Grow Case probabilistic cost-model histogram illustrating the distribution of 2000 model realizations. NPV is in \$M, where M is million.}
 \label{fig:grow_case_hist}
 \end{figure}
 
-The histogram for Redevelop \& Grow skews noticeably to the right with a long tail of simulation runs marking high-value realizations of the model. Standard deviation of NPV increases compared to the Redevelop Only case, suggesting this model is less robust. However, the greater spread reflects more upside potential and is a desirable feature. It stands to reason then that robustness measured by standard deviation is not as useful a measure of design benefit as the other metrics in Table \ref{tab:grow_stats}. Figure \ref{fig:grow_case_cdf} illustrates the rightward shift of the target curve compared to those shown in Figures \ref{fig:base_case_cdf} and \ref{fig:redevelop_case_cdf}. Only 23\% of simulated results result in a project loss. 
+The histogram for Redevelop \& Grow skews noticeably to the right with a long tail of simulation runs marking high-value realizations of the model. Standard deviation of NPV increases compared to the Redevelop Only case, making this model less robust by definition. Robustness measured by standard deviation is a useful metric because it inhibits overconfidence in desirable outcomes. However, robustness alone does not serve as a good criterion for maximizing value; the act of minimizing downside outcomes and expanding upside opportunities may also increase the standard deviation, as happens with this case. Importantly, the rightward shift of the target curve in Figure \ref{fig:grow_case_cdf} compared to the previous cases indicates Redevelop \& Grow dominates the other scenarios, as suggested by improvements across all NPV metrics. This shift is also illustrated in Figure \ref{fig:all_case_cdf}. 
+%. However, the greater spread reflects more upside potential and is a desirable feature. It stands to reason then that robustness measured by standard deviation is %not as
+%useful as a measure of design benefit because it inhibits overconfidence in a desirable outcome% as the other metrics in Table \ref{tab:grow_stats}
+%.  illustrates the rightward shift of the target curve compared to those shown in Figures \ref{fig:base_case_cdf} and \ref{fig:redevelop_case_cdf}. 
 
-\begin{figure}[!htp]
+\begin{figure}
 \centering
-\includegraphics[width=.85\textwidth]{templates/images/Figure-Grow_Case_CDF.png}
+\includegraphics[width=.8\textwidth]{templates/images/Figure-Grow_Case_CDF.png}
 \caption[Redevelop \& Grow Case CDF]{Cumulative distribution function for the Redevelop \& Grow Case probabilistic cost model. The curve summarizes results from 2000 model realizations. NPV is reported in \$M, where M is million.}
 \label{fig:grow_case_cdf}
 \end{figure}
@@ -190,74 +191,77 @@ Table \ref{tab:grow_stats} outlines key statistical measures summarizing the per
 
 \begin{table}[H]
 \centering
+\resizebox*{!}{.225\textheight}{
 \begin{tabular}{|l|r|}
 \hline
-\textbf{Redevelop \& Grow Case Statistics} & Rx=2000 \\ \hline
+\textbf{Redevelop \& Grow Case Statistics} &  $\mathpzc{R}$ = 2000 \\ \hline
 ENPV (\$M) & 9.6 \\ \hline
 STD(NPV) (\$M) & 16.5 \\ \hline
 P05 NPV (\$M) & $\boldsymbol{-}$14.2 \\ \hline
 P50 NPV (\$M) & 8.2 \\ \hline
 P95 NPV (\$M) & 38.2 \\ \hline
 \% Difference from NPV$_{s}$ & 832\% \\ \hline
-\end{tabular}
-\caption[Redevelop \& Grow Case statistics]{Redevelop \& Grow case model statistics for Rx=2000 model realizations. NPV is reported in \$M, where M is million. NPV$_s$ refers to the static model NPV, as reported in Table \ref{tab:static_mod_stats}.}
+\end{tabular}}
+\caption[Redevelop \& Grow Case statistics]{Redevelop \& Grow case model statistics for 2000 model realizations. NPV$_s$ refers to the static model NPV reported in Section \ref{ch6:static_stats}.}
 \label{tab:grow_stats}
 \end{table}
 
 \section{Full Flexibility Case Model}\label{ch6:reduce_case}
 
-Full Flexibility adds a decision rule around reduction of aggregate plant capacity (Section \ref{ch4:dr_reduce}). If electricity prices drop by a threshold amount, power plant modules are proactively decommissioned to reduce electricity production and operating expenses. Redevelopment and Capacity Growth decision rules remain in effect, as does the random sampling treatment for drilling costs, electricity pricing, geothermal gradient, reservoir temperature, and thermal drawdown rate based on PDFs defined in Section \ref{ch4:pdfs}.
+Full Flexibility adds a decision rule around reduction of aggregate plant capacity (Section \ref{ch4:dr_reduce}). If electricity prices drop by a threshold amount, power plant modules are proactively decommissioned to reduce electricity production and operating expenses. Redevelopment and Capacity Growth decision rules remain in effect, as does the random-sampling treatment for drilling costs, electricity pricing, geothermal gradient, reservoir temperature, and thermal drawdown rate based on PDFs defined in Section \ref{ch4:pdfs}.
 
 \subsection{Model Results}\label{ch6:reduce_results}
 In a somewhat surprising outcome, the simulation for Full Flexibility results in an ENPV of \$6.7 million (Table \ref{tab:reduce_stats}). Although this value is 545\% greater than the static model NPV, it falls short of the Redevelop \& Grow case by nearly \$3 million (see Table \ref{tab:grow_stats}). Both VAR and VAG show less attractive results as well; P$_{05}$ is $-\$$16.3M and P$_{95}$ is \$36.2 million, both $\approx\$2$ million worse than Redevelop \& Grow.  
 
-\begin{figure}[!htp]
+\begin{figure}
 \centering
-\includegraphics[width=.85\textwidth]{templates/images/Figure-Reduce_Case_Histogram.png}
+\includegraphics[width=.8\textwidth]{templates/images/Figure-Reduce_Case_Histogram.png}
 \caption[Full Flexibility Case histogram]{Full Flexibility Case probabilistic cost model histogram illustrating the distribution of 2000 model realizations. NPV is reported in \$M, where M is million.}
 \label{fig:reduce_case_hist}
 \end{figure}
 
-The results histogram (Figure \ref{fig:reduce_case_hist}) shows the same right skew as the Redevelop \& Grow model but with a slightly more compact form based on the lower standard deviation (Table \ref{tab:reduce_stats}). The difference in median values between the two cases amounts to $\approx\$3$ million, further confirming the Full Flexibility case is entirely dominated by the Redevelop \& Grow case. Figure \ref{fig:reduce_case_cdf} depicts the case target curve. There is a steep climb beginning at $-$\$14 million such that 33\% of model realizations result in project losses --- 10\% more than Redevelop \& Grow.
+The results histogram (Figure \ref{fig:reduce_case_hist}) shows the same right skew as the Redevelop \& Grow model but with a slightly more compact form based on the lower standard deviation (Table \ref{tab:reduce_stats}). The difference in median values between the two cases amounts to $\approx\$3$ million, further confirming the Full Flexibility case is entirely dominated by the Redevelop \& Grow case. Figure \ref{fig:reduce_case_cdf} depicts the case target curve. There is a steep climb beginning at $-$\$14 million such that 33\% of model realizations result in project losses ---that is, 10\% more than for Redevelop \& Grow.
 
-\begin{figure}[!htp]
+\begin{figure}
 \centering
-\includegraphics[width=.85\textwidth]{templates/images/Figure-Reduce_Case_CDF.png}
+\includegraphics[width=.8\textwidth]{templates/images/Figure-Reduce_Case_CDF.png}
 \caption[Full Flexibility Case CDF]{Cumulative distribution function for the Full Flexibility Case probabilistic cost model. The curve summarizes results from 2000 model realizations. NPV is reported in \$M, where M is million.}
 \label{fig:reduce_case_cdf}
 \end{figure}
 
 It is interesting to note that the modeled electricity forecast includes enough volatility to generate cases with both +20\% and $-$20\% price deviations (Figure \ref{fig:elec_price_prob}), potentially (and perhaps unrealistically) triggering both a capacity expansion and reduction within the same 30-year project lifespan. In addition, since modeled prices increase over time, except briefly when the randomly-placed step-change is negative, lost revenue from the utility forcing PPA renegotiations if electricity pricing went into a multi-year decline (e.g., Low Renewable Technology Cost case in Figure \ref{fig:EFS_electricification}) is not simulated here. These factors may play a role in the dominance of the Redevelop \& Grow case over Full Flexibility.
 
-Nevertheless, there is an additional simple explanation for the model behavior. If power plant modules are decommissioned, the model is more sensitive to the drop in revenue from reduced electricity generation than any benefit realized by discounted OPEX. The cost savings is just not significant enough to make up for less income.
+Nevertheless, there is an additional and simple explanation for the model behavior. If power-plant modules are decommissioned, the model is more sensitive to the drop in revenue from reduced electricity generation than any benefit realized by discounted OPEX. The cost savings is just not significant enough to make up for less income.
 
 \subsection{Summary Statistics}\label{ch6:reduce_stats}
 Table \ref{tab:reduce_stats} outlines key statistical measures summarizing the performance of the Full Flexibility Case probabilistic cost model.
 
 \begin{table}[H]
 \centering
+\resizebox*{!}{.225\textheight}{
 \begin{tabular}{|l|r|}
 \hline
-\textbf{Full Flexibility Case Statistics} & Rx=2000 \\ \hline
+\textbf{Full Flexibility Case Statistics} & $\mathpzc{R}$ = 2000 \\ \hline
 ENPV (\$M) & 6.7 \\ \hline
 STD(NPV) (\$M) & 16.0 \\ \hline
 P05 NPV (\$M) & $\boldsymbol{-}$16.3 \\ \hline
 P50 NPV (\$M) & 4.9 \\ \hline
 P95 NPV (\$M) & 36.2 \\ \hline
 \% Difference from NPV$_{s}$ & 545\% \\ \hline
-\end{tabular}
-\caption[Full Flexibility Case statistics]{Full Flexibility case model statistics for Rx=2000 model realizations. NPV is reported in \$M, where M is million. NPV$_s$ refers to the static model NPV, as reported in Table \ref{tab:static_mod_stats}.}
+\end{tabular}}
+\caption[Full Flexibility Case statistics]{Full Flexibility case model statistics for 2000 model realizations. NPV$_s$ refers to the static model NPV reported in Section \ref{ch6:static_stats}.}
 \label{tab:reduce_stats}
 \end{table}
 
 \section{Combined Model Comparison}
 
-Figure \ref{fig:all_case_cdf} illustrates the target curves for the four probabilistic models discussed in the previous sections. The Base Case model is dominated by all other models on the low-side and merges with the Redevelop Case on the high-side. The Full Flexibility Case greatly improves on the Base and Redevelop Cases. Redevelop \& Grow appears farthest to the right, making it the preferred model for the cost model parameterization as described in Section \ref{ch4:cm_params}. 
+Figure \ref{fig:all_case_cdf} illustrates the target curves for the four probabilistic models discussed in the previous sections. The Base Case model is dominated by all other models on the low-side and merges with the Redevelop Case on the high-side. The Full Flexibility Case greatly improves on the Base and Redevelop Cases. Redevelop \& Grow appears farthest to the right but with the smallest slope, indicating it has the highest standard deviation and hence least confidence. Nevertheless, Redevelop \& Grown exceeds all other cases on the high-side, low-side, and expected value, and thus would be the recommended operational strategy based on these model results.
+%, but with smallest slope, making it the most optimistic and least confident model for the cost model parameterization, as described in Section \ref{ch4:cm_params}. 
 
-\begin{figure}[!htp]
+\begin{figure}%[!htp]
 \centering
-\includegraphics[width=.85\textwidth]{templates/images/Figure-All_Case_CDF.png}
-\caption[All Cases CDF]{Cumulative distribution functions for all probabilistic cases evaluated in Sections \ref{ch6:base_case} to \ref{ch6:reduce_case}. Each curve summarizes results from 2000 model realizations. NPV is reported in \$M, where M is million.}
+\includegraphics[width=.8\textwidth]{templates/images/Figure-All_Case_CDF.png}
+\caption[All Cases CDF]{Cumulative distribution functions for all probabilistic cases evaluated in Sections \ref{ch6:base_case} to \ref{ch6:reduce_case}. Each curve summarizes results from 2000 model realizations.}
 \label{fig:all_case_cdf}
 \end{figure}
 
@@ -272,7 +276,7 @@ The gap between the Full Flexibility (yellow) and Redevelop \& Grow (gray) curve
 \begin{figure}[!htp]
 \centering
 \includegraphics[width=.98\textwidth]{templates/images/Figure-Sensitivity_Reduction.pdf.png}
-\caption[Reduction Amount sensitivity test]{\textit{Reduction amount} sensitivity test using model target curves. Each curve illustrates results for a Monte Carlo simulation with 2000 runs of the indicated models. \textit{Reduction amount} only impacts Full Flexibility Case (yellow), so Base Case (orange), Redevelop Case (blue), and Redevelop \& Grow Case (gray) remain unchanged. \textit{Reduction amount values} include A. 35\%, B. 25\%, C. 15\%, D. 6\%, E. 5\%, and F. 4\%. NPV is reported in \$M, where M is million.}
+\caption[Reduction Amount sensitivity test]{\textit{Reduction amount} sensitivity test using model target curves. Each curve illustrates results for a Monte Carlo simulation with 2000 runs of the indicated models. \textit{Reduction amount} only impacts Full Flexibility Case (yellow), so Base Case (orange), Redevelop Case (blue), and Redevelop \& Grow Case (gray) remain unchanged. \textit{Reduction amount values} include A.\ 35\%, B.\ 25\%, C.\ 15\%, D.\ 6\%, E.\ 5\%, and F.\ 4\%. NPV is reported in \$M, where M is million.}
 \label{fig:sens_test_reduction}
 \end{figure}
 
@@ -281,26 +285,26 @@ The gap between the Full Flexibility (yellow) and Redevelop \& Grow (gray) curve
 
 A similar sensitivity test is executed by varying the \textit{Expansion amount} parameter while holding \textit{Reduction amount} at 5\%. Both the Full Flexibility and Redevelop \& Grow target curves respond to this parameter since both cases include the Capacity Growth decision rule (Section \ref{ch4:dr_grow}). Figure \ref{fig:sens_test_expansion} illustrates the results for step-wise increases to \textit{Expansion amount} by an increment of 20\%. 
 
-Full Flexibility and Redevelop \& Grow target curves closely match each other except in the high-side model realizations, i.e., those above \$20 million NPV, and in the low-side near $-\$$20 million NPV. The low side variability relates to the sparse count of model realizations at $-\$$20 million NPV in each Monte Carlo simulation. For the better-constrained high-side, Full Flexibility shows a slight advantage when \textit{Expansion amount} is 25\% and 65\%. However, the separation is more pronounced for a 45\% \textit{Expansion amount}. In this sweet spot case, Full Flexibility ENPV amounts to \$13.7 million, $\approx\$1$ million greater than that for Redevelop \& Grow. This optimized potential would be missed without testing and refining the project growth and reduction strategies through sensitivity testing and parameter tuning.
+Full Flexibility and Redevelop \& Grow target curves closely match each other except in the high-side model realizations, i.e., those above \$20 million NPV, and in the low side near $-\$$20 million NPV. The low-side variability relates to the sparse count of model realizations at $-\$$20 million NPV in each Monte Carlo simulation. For the better-constrained high side, Full Flexibility shows a slight advantage when \textit{Expansion amount} is 25\% and 65\%. However, the separation is more pronounced for a 45\% \textit{Expansion amount}. In this sweet-spot case, Full Flexibility ENPV amounts to \$13.7 million, $\approx\$1$ million greater than that for Redevelop \& Grow. This optimized potential would be missed without testing and refining the project growth and reduction strategies through sensitivity testing and parameter tuning.
 
 \begin{figure}[!htp]
 \centering
 \includegraphics[width=.98\textwidth]{templates/images/Figure-Sensitivity_Expansion_Amount.png}
-\caption[Expansion Amount sensitivity test]{\textit{Expansion amount} sensitivity test using model target curves. Each curve illustrates results for a Monte Carlo simulation with 2000 runs of the indicated models. \textit{Expansion amount} impacts both Redevelop \& Grow (gray) and Full Flexibility (yellow) target curves. Base Case (orange) and Redevelop Case (blue) remain unchanged. \textit{Expansion amount values} include A. 25\%, B. 45\%, and C. 65\%. NPV is reported in \$M, where M is million.}
+\caption[Expansion Amount sensitivity test]{\textit{Expansion amount} sensitivity test using model target curves. Each curve illustrates results for a Monte Carlo simulation with 2000 runs of the indicated models. \textit{Expansion amount} impacts both Redevelop \& Grow (gray) and Full Flexibility (yellow) target curves. Base Case (orange) and Redevelop Case (blue) remain unchanged. \textit{Expansion amount values} include A.\ 25\%, B.\ 45\%, and C.\ 65\%. NPV is reported in \$M, where M is million.}
 \label{fig:sens_test_expansion}
 \end{figure}
 
 \section{Recap}\label{ch6:recap}
 
 This chapter covered the execution of cost models described in Chapter \ref{ch4:cm_prep}. Results for a deterministic model and four probabilistic models illustrate how incorporating uncertainties and decision rules into a modeling approach can provide important insights into potential project profit and loss. By comparing summary metrics and target curves, this methodology allows a decision-maker to test strategies for mitigating the risk of an unprofitable EGS expansion to an existing power plant.
-\\
-\\
+
+\noindent
 Key insights from cost modeling include:
 \begin{enumerate}
-    \item Static (deterministic) cost models that use average or most-likely parameter values are inherently flawed. They distort estimates of project value and may lead to poor project decisions based on inaccurate raw NPV numbers.
-    \item Probabilistic model result ensembles from Monte Carlo simulation are best compared using target curves (CDFs) and summary statistics like ENPV. Solution distribution robustness is not necessarily desirable --- non-robust imbalance toward the high side means a model has more Value at Gain.
-    \item Redeveloping geothermal wells to counter reservoir thermal decline reduces downside risk but does not improve upside potential for the project.
-    \item Installing additional power plant modules in response to greater demand results in significantly greater project value with reduced downside risk.
-    \item Decommissioning power plant modules in response to plummeting prices generally does not capture greater project value, likely due to the lost revenue from reduced power generation outpacing savings in OPEX in this model formulation.
-    \item Sensitivity testing of decision rule parameters is a means of optimizing operational strategy and can reveal hidden project value.
+    \item Static (deterministic) cost models that use average or most-likely parameter values are inherently flawed and limited. They distort estimates of project value and may lead to poor project decisions based on overconfidence stemming from inaccurate raw NPV numbers.
+    \item Probabilistic model results from Monte Carlo simulation are best compared using target curves (CDFs) and summary statistics like distribution robustness, ENPV, Value at Risk, and Value at Gain in a multi-dimensional analysis. Collectively, these measures can reveal operational strategies that simultaneously protect against project losses and offer opportunities for project gains that may otherwise not be realized.
+    \item Redeveloping geothermal wells to counter reservoir thermal decline reduces downside risk, but does not improve upside potential for the project.
+    \item Installing additional power-plant modules in response to greater demand results in significantly greater project value with reduced downside risk.
+    \item Decommissioning power-plant modules in response to plummeting prices generally does not capture greater value, likely because the lost revenue from reduced power generation outpaces savings in OPEX, at least in this model formulation.
+    \item Sensitivity testing of decision-rule parameters is a means of optimizing operational strategy and can reveal hidden project value.
 \end{enumerate}
