--- a/templates/chap8.tex
+++ b/templates/chap8.tex
@@ -1,8 +1,9 @@
 \chapter{Conclusions}\label{ch8:conclusions}
-As the transition toward lower-carbon energy solutions continues to progress, geothermal uniquely offers a zero-emissions, continuous source that can fulfill the baseload needs of energy consumers. A geothermal field lifecycle closely follows that of a hydrocarbon field, from exploration and appraisal, through field development, to production and eventual decommissioning. The expertise with subsurface data, reservoir modeling, complex drilling, and field management skills valued in oil \& gas are similarly of great value to the geothermal industry. However, geothermal without EGS only has limited reach, and EGS comes with high risk. Without clear risk-mitigation strategies, oil \& gas will likely discount or delay adding geothermal to their energy portfolios despite the clear synergies between the two domains.
 
-Play fairway analysis, a common tool in the oil \& gas industry, has gained traction for reducing risks associated with geothermal exploration. However, PFA requires integration of disparate data sets to define chance of success for geothermal risk elements. This process lacks standardization and requires judgment calls from subject matter experts. Machine learning offers data-driven forecasts that are both quantitative and repeatable, and results from this work shows great promise in the predictive ability of several varieties of machine learning models. Perhaps more importantly, uncertainty characterization delivers invaluable information on where the data should be trusted, where predictive capacity of individual models varies, and where multiple models agree. Furthermore, machine learning models determine which data sets provide the most discriminatory value, which can steer exploration spend on additional data acquisition activities. Collectively, use of machine learning for play-risking or prospecting reduces the risk of making poor decisions on unreliable favorability maps, allocating budget on low-impact data sets, or missing important signals within the data that make the difference between a productive or an uneconomic geothermal well. And by relying on available data up-front to build these models, machine learning-based risk-mitigation comes with quick results at low cost.
+As the transition toward lower-carbon energy solutions continues to progress, geothermal uniquely offers a zero-emissions, continuous source that can fulfill the baseload needs of energy consumers. A geothermal-field lifecycle closely follows that of a hydrocarbon field, from exploration and appraisal, through field development, to production and eventual decommissioning. The expertise with subsurface data, reservoir modeling, complex drilling, and field-management skills valued in oil \& gas are similarly of great value to the geothermal industry. However, geothermal without EGS only has limited reach, and EGS comes with high risk. Without clear risk-mitigation strategies, oil \& gas will likely discount or delay adding geothermal to their energy portfolios despite the clear synergies between the two domains.
 
-Geothermal cost modeling with existing tools delivers levelized cost estimates from a set of pre-determined resource, surface plant, field, and financial parameters for the production phase of a field. Yet most of these models disallow defining input parameters with a distribution of values capturing parameter uncertainty. In addition, the models assume static operational conditions over the lifetime of the field (typically 30 years), which leaves no room for the strategic decision-making that takes place under real-life conditions. This thesis shows economic modeling that includes parameter uncertainties produces easily-comparable probabilistic distributions as results. Tailoring the model and decision rules to the geothermal field design of interest allows rapid testing of project feasibility and optimization of project actions to limit downside risk while capturing upside potential. Risks are addressed transparently and with quantifiable project impact at little cost in resources or capital.
+Play fairway analysis, a common tool in the oil \& gas industry, has gained traction for reducing risks associated with geothermal exploration. However, PFA requires integration of disparate data sets to define chance of success for geothermal risk elements. This process lacks standardization and requires judgment calls from subject matter experts. Machine learning offers data-driven forecasts that are both quantitative and repeatable, and results from this work shows great promise in the predictive ability of several varieties of machine-learning models. Perhaps more importantly, uncertainty characterization of spatially distributed data delivers invaluable information on where the data should be trusted, where predictive capacity of individual models varies, and where multiple models agree. Furthermore, machine-learning models determine which data sets provide the most discriminatory value, which can steer exploration decision makers to spend prudently on additional data acquisition activities. Collectively, use of machine learning for play-risking or prospecting reduces the risk of making poor decisions on unreliable favorability maps, allocating budget on low-impact data sets, or missing important signals within the data that make the difference between a productive or an uneconomic geothermal well. And by relying on available data up-front to build these models, machine-learning based risk-mitigation comes with quick results at low cost.
 
-Mitigating the risks of adopting geothermal energy should be handled systematically through a risk management process. Working within a geothermal project team, risks are cataloged, assigned likelihood and consequence values, and prioritized based on those values using a risk matrix. Choosing among mitigation plans comes down to comparing the results of executing each proposed plan of action. As shown by the work presented here, mitigation plans that combine available data with digital technologies to create predictive models with uncertainty can significantly reduce the threat of high-consequence geothermal exploration and production risks. Careful uncertainty characterization and evaluation may thus be the key to making geothermal a commercially-viable, low-carbon investment for oil \& gas companies navigating an evolving energy future. 
+Geothermal cost modeling with existing tools delivers levelized cost estimates from a set of pre-determined resource, surface-plant, field, and financial parameters for the production phase of a field. Yet most of these models do not enable defining input parameters with a distribution of values to capture parameter uncertainty. In addition, the models assume static operational conditions over the lifetime of the field (typically 30 years), which leaves no room for the strategic decision-making that takes place under real-life conditions. This thesis shows economic modeling that includes parameter uncertainties can produce easily-comparable probabilistic distributions as results. Tailoring the model and decision rules to the geothermal field design of interest allows rapid testing of project feasibility and optimization of project actions to limit downside risk while capturing upside potential. Risks are addressed transparently and with quantifiable project impact at little cost in resources or capital.
+
+Mitigating the risks of adopting geothermal energy should be handled systematically through a risk-management process. Working within a geothermal project team, risks are cataloged, assigned likelihood and consequence values, and prioritized based on those values using a risk matrix. Choosing among mitigation plans comes down to comparing the results of executing each proposed plan of action. As shown by the work presented here, mitigation plans that combine available data with digital technologies to create predictive models with uncertainty can significantly reduce the threat of high-consequence geothermal exploration and production risks. Careful uncertainty characterization and evaluation may thus be the key to making geothermal a commercially-viable, low-carbon investment for oil \& gas companies navigating an evolving energy future. 
