--- a/templates/chap9.tex
+++ b/templates/chap9.tex
@@ -3,35 +3,46 @@
 
 In this chapter, directions of further inquiry are suggested as both extensions of methods already reviewed and new avenues not yet explored by the author. The topic of geothermal energy is a rich one with many great opportunities for research.
 
-\section{Machine Learning Applications}\label{ch9:future_work_ml}
+\section{Machine-Learning Applications}\label{ch9:future_work_ml}
 
-This thesis primarily focused on supervised classification models in its survey of machine learning methods for geothermal exploration. Maintaining a limited scope in modeling -- as well as in data-gathering and preparation --- was intentional, but doing so set aside a number of topics worthy of follow-up analysis:
-
+This thesis primarily focused on supervised classification models in its survey of machine-learning methods for geothermal exploration. Maintaining a limited scope in modeling -- as well as in data-gathering and preparation --- was intentional, but doing so set aside a number of topics worthy of follow-up analysis:
 \begin{itemize}
-    \item Machine learning methods in Chapter \ref{ch5:ml_results} framed the prediction problem as a classification with four distinct labels for assignment (see Section \ref{ch3:gradient_classes}). Although convenient, this choice is problematic for continuous response variables like geothermal gradient. Classifiers treated each gradient class as independent, with no inherent ordered relationship. This assumption is of course false. Binning continuous variables makes sense when training data is sparse, but care must be taken for cases near the bounds between those bins. Further research on applying regression methods would help answer whether similar machine learning tools can perform well at predicting those edge case gradients where even the best classifiers (XGBoost, ANN) appeared to have difficulty.
-    \item Choosing to use point data extracted from geothermal feature maps as input to machine learning models (see Section \ref{ch3:meshgrid}) was expedient, but it also ignored the spatial correlation inherent to geologic data. The presence of features like faults or volcanic dikes at one location naturally raises the probability of finding the same at a nearby location. This kind of spatial relationship might be better preserved using convolutional neural networks or more complex network architectures that go beyond the fully-connected ANN described in Section \ref{ch5:ann_structure}.
-    \item Management of data sparsity is a common issue in exploration. Here, the original data set was augmented by imputed pseudo-wells (Section \ref{ch3:imputation}) in a crude but effective approach to expanding the training data set. Data imputation using more elegant and advanced methods would be a worthwhile topic of study for defining standards and recommendations to guide future geothermal data engineers.
+    \item Machine-learning methods in Chapter \ref{ch5:ml_results} framed the prediction problem as a classification with four distinct labels for assignment (see Section \ref{ch3:gradient_classes}). Although convenient, this choice is problematic for continuous response variables like geothermal gradient. Classifiers treated each gradient class as independent, with no inherent ordered relationship. This assumption is of course false. Binning, a.k.a., enumerating or quantizing, continuous variables makes sense when training data are sparse, but care must be taken for cases near the bounds between those bins. Further research on applying regression methods would help answer whether similar machine-learning tools can perform well at predicting those edge-case gradients where even the best classifiers (XGBoost, ANN) appeared to have difficulty.
+    
+    \item Using point data extracted from geothermal feature maps as input to machine-learning models (see Section \ref{ch3:meshgrid}) was expedient, but it also ignored the spatial correlations inherent to geologic data. The presence of features like faults or volcanic dikes at one location naturally raises the probability of finding the same at a nearby location. This kind of spatial relationship might be better preserved by including map coordinates in the feature set. Alternatively, modeling efforts could apply convolutional neural networks or other more complex architectures that go beyond the fully-connected ANN described in Section \ref{ch5:ann_structure}.
+    
+    \item Management of data sparsity is a common issue in exploration. Here, the original data was augmented by imputing geothermal gradient values for adjacent pseudo-wells (Section \ref{ch3:imputation}) in an inelegant but effective approach to expanding the training data set. Data imputation via more advanced methods would be a worthwhile topic of study, with the end goal of setting standards to guide future geothermal data engineers. Of particular interest would be identifying methods that minimize spurious correlation imposed on the data as can occur with methods like kriging or k-nearest neighbors imputation.
+    
     \item Autoencoders, Principle Component Analysis, and Non-negative Matrix Factorization are all effective tools for dimensionality reduction. Evaluating these and other methods can help bridge the gap between the supervised studies in this thesis and unsupervised efforts described in recent literature \citep{pepin_new_2019,smith_characterizing_2021,vesselinov_discovering_2020}. Of particular interest might be consolidating many features associated with the same geothermal risk element into “super features” before applying tree-based ensemble methods or neural networks for classification.
+    
     \item Uncertainty estimation for secondary data products, e.g. raster files generated by others without paired standard errors or original primary-source observations, will be necessary to evaluate measurement uncertainty (see Section \ref{ch5:measure_uncertainty}) for all modeled features. Until the day that reporting uncertainties becomes an expectation, if not a requirement, there will be the need for clear guidance on deriving error estimates for pre-gridded data.
-    \item The topic of ensemble models was raised in this thesis but not rigorously pursued. Ensemble models apply a model-of-models paradigm to machine learning and show success in other applications \citep[e.g.,][]{wilson_machine_2020}. They naturally tie to Play Fairway Analysis where final favorability maps represent combinatory insights from individual risk element maps (see Section \ref{ch2:pfa}). An ensemble model approach could streamline creation of a final geothermal favorability map while also preserving the prediction of specific risk components.
+    
+    \item The topic of ensemble models was raised in this thesis but not rigorously pursued. Ensemble models apply a model-of-models paradigm to machine learning and show success in other applications \citep[e.g.,][]{wilson_machine_2020}. They naturally tie to Play Fairway Analysis where final favorability maps represent combinatory insights from individual risk-element maps (see Section \ref{ch2:pfa}). An ensemble model approach could streamline the creation of a final geothermal favorability map while also preserving the prediction of specific risk components.
 \end{itemize}
 
 \section{Cost Modeling}\label{ch9:future_work_cm}
 
 Although a number of economic models for geothermal power production already exist with varying degrees of maturity (see Section \ref{ch2:cost_models}), the contribution of this thesis to incorporating uncertainty and flexibility into cost models merely scratches the surface on what can still be done.
-
 \begin{itemize}
-    \item Using well-known, popular platforms like Microsoft Excel greatly lessens the burden around deployment and adoption of new tools. However, spreadsheets come with limitations, some of which impacted the capabilities of the cost model defined in Section \ref{ch4:cm_concept}. Most significantly, the individual power plant modules and injector-producer well couplets were difficult to track and manage as their count dynamically changed throughout the lifespan of a field. One suggested improvement is to expand the existing model with more complex code that treats the modules and wells as objects, each with individually-tracked attributes like age, efficiencies, decline rates, and maintenance records. Uncertainty definitions, decision rules, and overall user experience can remain Excel-based, but functionality enhancements via an Excel plug-in or VBA code could overcome calculation limitations.
-    \item Electricity pricing forecasts and Power Purchase Agreements (PPAs) likely require a more nuanced treatment than conducted in this thesis. Additional research into the best representation of wholesale electricity price changes, including reversing trends, would be a good first step. But perhaps more fundamentally, the relationship between price changes and the likelihood and scope of a PPA update with utility partners must be characterized and modeled.
-    \item The Electrification Futures Study \citep{murphy_electrification_2021} and the SIPA study on carbon taxation \citep{larson_energy_2018} both note complexities of modeling renewable energy demand when the growth and impact of the natural gas market remains uncertain. Furthermore, the role of targeted subsidies for technologies like wind energy further disrupt an already tilted playing field \citep[see][]{lazard_lazards_2020}. As cost models for geothermal continue to be refined, the dynamics associated with the natural gas market and incentives (including subsidies) for other competing renewables must be incorporated into an overall demand equation. The latter can help determine field expansion strategies and influence the agreed-upon pricing for PPA updates.
-    \item A unique feature of the cost model described in this thesis is the treatment of power plant installation and expansion as modular in nature. This concept builds on existing technology, but the companies leading the way with that technology treat aspects of its performance and their financial terms of service as trade secrets. More accurate data regarding module up-front costs, performance limits for higher-temperature production, and fee structure for leasing, expansion, and decommissioning would all improve the existing model.
-    \item Other opportunities for enhancing the geothermal cost model include: split pricing for electricity sales in addition to the original PPA with a utility, identifying and capturing efficiencies (e.g. lower fluid costs) from the expansion nature of the plant being modeled, incorporating local sales to nearby businesses or towns as separate revenue streams, and investigating how hybrid power (paired solar, wind) and storage (battery) project options influence the bottom line.
+    \item Using well-known, popular platforms like Microsoft Excel greatly lessens the burden around deployment and adoption of new tools. However, spreadsheets come with limitations, some of which impacted the capabilities of the cost model defined in Section \ref{ch4:cm_concept}. Most significantly, the individual power plant modules and injector-producer well couplets were difficult to track and manage as their count dynamically changed throughout the lifespan of a field. One suggested improvement is to expand the existing model with more complex code that treats the modules and wells as objects, each having individually-tracked attributes like age, efficiencies, decline rates, and maintenance records. Uncertainty definitions, decision rules, and the overall user experience can remain Excel-based, but functionality enhancements via an Excel plug-in or VBA code could overcome calculation limitations.
+    
+    \item Electricity-pricing forecasts and Power Purchase Agreements (PPAs) likely require a more nuanced treatment than conducted in this thesis. Additional research into the best representation of wholesale electricity price changes, including reversing trends, would be a good first step. But perhaps more fundamentally, the relationship between price changes and the likelihood and scope of a PPA update with utility partners must be characterized and modeled.
+    
+    \item Additional research and sensitivity testing on the best distribution functions to use for different variables in geothermal cost models could help improve the reliability of the model presented in this thesis. For example, in the present study, both geothermal gradient and reservoir temperature are represented by uniform distributions with bounds set to the range of values observed at Lightning Dock. Expanding those distributions to capture a broader range of potential (unobserved) values, e.g. with a Gaussian distribution, would be a good first refinement.
+    
+    \item The Electrification Futures Study \citep{murphy_electrification_2021} and the SIPA study on carbon taxation \citep{larson_energy_2018} both note complexities of modeling renewable-energy demand when the growth and impact of the natural-gas market remains uncertain. Furthermore, the role of targeted subsidies for technologies like wind energy further disrupt an already tilted playing field \citep[see][]{lazard_lazards_2020}. As cost models for geothermal continue to be refined, the dynamics associated with the natural-gas market and incentives (including subsidies) for other competing renewables must be incorporated into an overall demand equation. The latter can help determine field-expansion strategies and influence the agreed-upon pricing for PPA updates.
+    \item A unique feature of the cost model described in this thesis is the treatment of power-plant installation and expansion as modular in nature. This concept builds on existing technology, but the companies leading the way with that technology treat aspects of its performance and their financial terms of service as trade secrets. More accurate data regarding module up-front costs, performance limits for higher-temperature production, and fee structures for leasing, expansion, and decommissioning would all improve the existing model.
+    \item Other opportunities for enhancing the geothermal cost model include: split pricing for electricity sales in addition to the original PPA with a utility; identifying and capturing efficiencies (e.g., lower fluid costs) from the expansion nature of the plant being modeled; incorporating local sales to nearby businesses or towns as separate revenue streams; treating the model as a facility portfolio instead of a single location; and investigating how hybrid power (paired solar, wind) and storage (battery) project options influence the bottom line.
 \end{itemize}
 
 \section{Related Research Topics}\label{ch9:future_work_related}
 
 \begin{itemize}
-    \item The original scope of this thesis included a section on evaluating existing and future drilling technologies. One possible roadmap for this research effort follows a systems approach. System architectural analyses of innovative techniques like millimeter-wave drilling \citep{woskov_millimeter-wave_2017} or spallation drilling \cite{augustine_hydrothermal_2009} could be compared to expected improvements to traditional rotary drilling \citep{lowry_geovision_2017}. Feedback from geothermal stakeholders would calibrate the benefit side of a cost-benefit analysis that includes constructing a tradespace to select preferred drilling architectures. As an added bonus, detailed cost estimates derived in the process could help reduce drilling cost uncertainty for geothermal cost models.
-    \item Machine learning methods used to generate map-based assessments of favorability lack the specificity of a 3-D subsurface model. Many of the geothermal data features described in Chapter \ref{ch3:data_prep} refer to surface observations. However, geophysical techniques (seismic, resistivity, gravity, magnetic, MT measurements) and interpretation products (faults, horizons, rock properties) typically extend into the third dimension. Research into transitioning a 2-D PFA into a 2.5- or 3-D analysis would help bridge the gap between the needs of mapping plays and those of full prospect characterization and detailed field planning.
-    \item Significant efforts have already been made in gathering geothermal-related data for access through the NREL OpenEI \citep{hallett_open_2010} or Geothermal Prospector \citep{nrel_geothermal_2021} data portals. With more data available, including those from large-scale integrated EGS projects like Utah FORGE \citep{moore_utah_2019}, research on effective reservoir characterization methods, early field operations, and sustaining field management will serve to increase efficiencies across the geothermal lifecycle. This research will be a fundamental factor toward broadly commercializing EGS.
+    \item Throughout the present study, machine learning and cost-modeling approaches are treated as separate opportunities. The combination of the two in hybrid methods defines an additional opportunity for managing risk in a geothermal project. In early project phases, a tradespace methodology balancing benefit from machine-learning feature attribution analysis with costs modeled for data acquisition, processing, and interpretation tasks can help optimize exploration activities. And economic models applied throughout the geothermal lifecycle can incorporate machine learning elements for predicting key inputs (e.g., price or demand forecasts) or automating the search across different strategies to determine truly-optimal recommendations.
+    
+    \item The original scope of this thesis included a section on evaluating existing and future drilling technologies. One possible roadmap for this research effort follows a systems approach. System architectural analyses of innovative techniques like millimeter-wave drilling \citep{woskov_millimeter-wave_2017} or spallation drilling \citep{augustine_hydrothermal_2009} could be compared to expected improvements to traditional rotary drilling \citep{lowry_geovision_2017}. Feedback from geothermal stakeholders would calibrate the benefit side of a cost-benefit analysis that includes constructing a tradespace to select preferred drilling architectures. As an added bonus, detailed cost estimates derived in the process could help reduce drilling-cost uncertainty for geothermal cost models.
+    
+    \item Machine-learning methods used to generate map-based assessments of favorability lack the specificity of a 3-D subsurface model. Many of the geothermal data features described in Chapter \ref{ch3:data_prep} refer to surface observations. However, geophysical techniques (seismic, resistivity, gravity, magnetic, MT measurements) and interpretation products (faults, horizons, rock properties) typically extend into the third (i.e., depth) dimension. Research into transitioning a 2-D PFA into a 2.5-D depth-slice or full 3-D analysis would help bridge the gap between the needs of mapping plays and those of full prospect characterization and detailed field planning.
+    
+    \item Significant efforts have already been made in gathering geothermal-related data for access through the NREL OpenEI \citep{hallett_open_2010} or Geothermal Prospector \citep{nrel_geothermal_2021} data portals. With more data available, including those from large-scale integrated EGS projects like Utah FORGE \citep{moore_utah_2019}, research on effective reservoir-characterization methods, early field operations, and sustaining field management will serve to increase efficiencies across the geothermal lifecycle. This research will be a fundamental factor toward broadly commercializing EGS.
 \end{itemize}
