--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,63 @@
 
+@misc{geoenergy_baseload_2020,
+	title = {Baseload {Power} \& {Climeon} to build geothermal power plant in {Taiwan} {\textbar} {ThinkGeoEnergy} - {Geothermal} {Energy} {News}},
+	shorttitle = {Power plant in {Taiwan}},
+	url = {https://www.thinkgeoenergy.com/baseload-power-climeon-to-build-geothermal-power-plant-in-taiwan/},
+	abstract = {Baseload Power Taiwan has ordered Climeon heat power units valued at \$4.1m for a geothermal power project in Taiwan.},
+	language = {en-US},
+	urldate = {2021-06-03},
+	author = {GeoEnergy, Think},
+	month = may,
+	year = {2020},
+}
+
+@misc{climeon_climeon_2021,
+	type = {Press {Release}},
+	title = {Climeon commissions second power plant in {Iceland}},
+	shorttitle = {Second power plant in {Iceland}},
+	url = {https://climeon.com/investor-english/?type=single&title=climeon-commissions-second-power-plant-in-iceland&encrypted_id=287756C7C185BCA0#cision-table},
+	language = {en-US},
+	urldate = {2021-06-03},
+	journal = {Climeon commissions second power plant in Iceland},
+	author = {{Climeon}},
+	month = feb,
+	year = {2021},
+}
+
+@misc{climeon_climeon_2021-1,
+	title = {The {Climeon} {Heat} {Power} {System} - {How} does it work?},
+	shorttitle = {Heat {Power} {System}},
+	url = {https://climeon.com/how-it-works/},
+	abstract = {Climeon Heat Power produces clean electricity from low-temperature waste heat from industrial processes and geothermal heat sources.},
+	language = {en-US},
+	urldate = {2021-05-01},
+	journal = {The Climeon Heat Power System - How does it work?},
+	author = {{Climeon}},
+	year = {2021},
+}
+
+@misc{ihs_ihs_2021,
+	title = {{IHS} {Markit} - {Leading} {Source} of {Critical} {Information}},
+	url = {https://ihsmarkit.com/index.html},
+	abstract = {Look to the new business information powerhouse, IHS Markit - supporting customers in 140+ countries, including 85\% of the Fortune Global 500.},
+	urldate = {2021-08-17},
+	journal = {IHS Markit},
+	author = {{IHS}},
+	month = aug,
+	year = {2021},
+}
+
+@misc{wood_mackenzie_energy_2019,
+	title = {Energy {Research} \& {Consultancy}},
+	url = {https://www.woodmac.com/},
+	abstract = {Empower strategic decision-making in global natural resources with quality data, analysis and advice. Discover the latest insights and reports online.},
+	language = {en},
+	urldate = {2021-08-17},
+	author = {{Wood Mackenzie}},
+	month = feb,
+	year = {2019},
+}
+
 @inproceedings{nair_rectified_2010,
 	address = {Madison, WI, USA},
 	series = {{ICML}'10},
@@ -2161,29 +2220,6 @@ This project was supported by an American Recovery and Reinvestment Act (ARRA) g
 	pages = {664--678},
 }
 
-@misc{climeon_climeon_2021,
-	type = {Press {Release}},
-	title = {Climeon commissions second power plant in {Iceland}},
-	url = {https://climeon.com/investor-english/?type=single&title=climeon-commissions-second-power-plant-in-iceland&encrypted_id=287756C7C185BCA0#cision-table},
-	language = {en-US},
-	urldate = {2021-06-03},
-	journal = {Climeon commissions second power plant in Iceland},
-	author = {{Climeon}},
-	month = feb,
-	year = {2021},
-}
-
-@misc{climeon_climeon_2021-1,
-	title = {The {Climeon} {Heat} {Power} {System} - {How} does it work?},
-	url = {https://climeon.com/how-it-works/},
-	abstract = {Climeon Heat Power produces clean electricity from low-temperature waste heat from industrial processes and geothermal heat sources.},
-	language = {en-US},
-	urldate = {2021-05-01},
-	journal = {The Climeon Heat Power System - How does it work?},
-	author = {{Climeon}},
-	year = {2021},
-}
-
 @article{faulds_discovery_2018,
 	title = {Discovery of a {Blind} {Geothermal} {System} in {Southern} {Gabbs} {Valley}, {Western} {Nevada}, through {Application} of the {Play} {Fairway} {Analysis} at {Multiple} {Scales}},
 	volume = {42},
@@ -2461,17 +2497,6 @@ This project was supported by an American Recovery and Reinvestment Act (ARRA) g
 	journal = {Rolling Stone},
 	author = {Ross, Malcolm},
 	month = oct,
-	year = {2020},
-}
-
-@misc{geoenergy_baseload_2020,
-	title = {Baseload {Power} \& {Climeon} to build geothermal power plant in {Taiwan} {\textbar} {ThinkGeoEnergy} - {Geothermal} {Energy} {News}},
-	url = {https://www.thinkgeoenergy.com/baseload-power-climeon-to-build-geothermal-power-plant-in-taiwan/},
-	abstract = {Baseload Power Taiwan has ordered Climeon heat power units valued at \$4.1m for a geothermal power project in Taiwan.},
-	language = {en-US},
-	urldate = {2021-06-03},
-	author = {GeoEnergy, Think},
-	month = may,
 	year = {2020},
 }
 
